log
Fri 09 Sep 2022 12:19:45 PM UTC: 
 tests:  0|6
total_score: 0/70
fcaff0c
Fri 09 Sep 2022 12:26:59 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:15: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |     map->size = NULL;
      |               ^
hashmap.c:59:18: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   59 |     map->current = NULL;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
0d25e0b
Fri 09 Sep 2022 12:38:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:15: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |     map->size = NULL;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
a332e4d
Fri 09 Sep 2022 12:38:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7ac3bb6
Fri 09 Sep 2022 12:39:28 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
beba672
Fri 09 Sep 2022 12:48:06 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:47: error: implicit declaration of function ‘siezof’ [-Werror=implicit-function-declaration]
   62 |     map->buckets = (Pair **) calloc(capacity, siezof(Pair *));
      |                                               ^~~~~~
hashmap.c:62:54: error: expected expression before ‘Pair’
   62 |     map->buckets = (Pair **) calloc(capacity, siezof(Pair *));
      |                                                      ^~~~
cc1: all warnings being treated as errors
Compilation failed
a6c490c
Fri 09 Sep 2022 12:48:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
16af925
Fri 09 Sep 2022 12:48:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3ddf17b
